# CUDA_RayTracing

./: .gitignore  README.md  test.ipynb  test.py  test2.py
CUDA_RayTracing/: BVH.cpp  BVH.h  BmpSave.cpp  BmpSave.h  CUDA_RayTracing.sln  CUDA_RayTracing.vcxproj  CUDA_RayTracing.vcxproj.filters  Camera.cuh  Collision.cu  Collision_Bezier.cu  Collision_Mesh.cu  Light.cpp  Light.cuh  Light.h  Primitive.cu  Primitive.cuh  RayTracer.cu  RayTracer.cuh  Renderer.cpp  Renderer.h  Renderer_CUDA.cpp  Scene.cpp  Scene.cu  Scene.cuh  Scene.h  Scene_Material.cu  Shade.cu  bmp.cpp  bmp.h  camera.cpp  camera.h  color.cpp  color.h  imgui.ini  main.cpp  primitive.cpp  primitive.h  raytracer.cpp  raytracer.h  solver.h  (+2 more)
CUDA_RayTracing/enc_temp_folder/0d2131096feea202ff0166364f96643/: main.cpp
CUDA_RayTracing/enc_temp_folder/6ebbe52134880bd7e4be2ee1f1d461/: scene_final.txt
CUDA_RayTracing/enc_temp_folder/e6716119aefc3648662498436d8fd3f6/: Collision_Mesh.cu
CUDA_RayTracing/resources/: imgui.ini  scene1.txt  scene2.txt  scene4.txt  scene5.txt  scene_bezier.txt  scene_final.txt  scene_mesh1.txt  scene_mesh2.txt  scene_mesh3.txt  scene_mesh4.txt
lib/cuda_common/: helper_math.h
lib/glad/: CMakeLists.txt  glad.vcxproj  glad.vcxproj.filters
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/imgui/: CMakeLists.txt  imgui.cpp  imgui.h  imgui.vcxproj  imgui.vcxproj.filters  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_truetype.h
